css/main.css
/* ... */
#footer-menu {
	background-color: #585b5b;
	font-weight: 700;
	margin-top: 25px;
	height: 33px;
	color: #FFF;
}

footer a {
	color: #FFF;
}

#credits {
	font-size: 12px;
	font-weight: 400;
	text-align: right;
}

#credits img {
	width: 55px;
}

footer a:hover {
	text-decoration: none;
  color: #74BBD4;
}

#instructions {
	width: 340px;
	overflow-x:hidden;
}

#instructions .col-6{
	padding-left: 0px;
}

#share {
	margin-top: 20px;
}

#next {
	-webkit-animation-duration: 1.5s;
    -webkit-animation-iteration-count: infinite;
    -moz-animation-duration: 1.5s;
    -moz-animation-iteration-count: infinite;
    -ms-animation-duration: 1.5s;
    -ms-animation-iteration-count: infinite;
    -o-animation-duration: 1.5s;
    -o-animation-iteration-count: infinite;
}

#bf_ribbon {
	margin-top: 40px;
	margin-left: 135px;
	height: 35px;
	background-color: #585b5b;
}

.progress-dots {
	text-align: center;
}

.progress-dots .unfinished {
	background-image: url('../img/unfinished_dot.png');
	height: 15px;
	width: 15px;
}

.progress-dots .active {
	background-image: url('../img/active_dot.png');
	height: 30px;
	width: 30px;
	color: #FFF;
}

.progress-dots .active h2 {
	position: relative;
	top: 5px;
	/*left: 15px;*/
}

.progress-dots .finished {
	background-image: url('../img/finished_dot.png');
	height: 15px;
	width: 15px;
}

.progress-dots li {
	margin-right: 5px;
	vertical-align: middle;
}


section .btn{
	margin-bottom: 10px;
}

.tooltip {
	background-color: #FFF;
}



.step_text #popover {
	color: #ff4000;
}

.step_text #popover:hover {
	color: #ff4000;
}

.feedback{
	display: none;
	margin: 15px auto;
	width: 260px;
}

.feedback h2 {
	color: #79C040;
}

.feedback .responseDisplay {
	color: #ff4000;
	font-size: 14px;
	font-weight: 700;
}

.feedback span {
	color: #ff4000;
}

.orange {
	color: #ff4000;
}

.blue {
	color: #74BBD4;
}

.green {
	color: #79c040;
}

#congrats {
	display: none;
	width: 260px;
	text-align: center;
	margin: 0 auto;
}

#congrats h3 {
	font-size: 18px;
	line-height: 20px;
	font-weight: 700;
}

#controls {
	width: 125px;
	margin: 0 auto;
}

#teach-controls {
	width: 125px;
	position: absolute;
	bottom: 60px;
	left: 105px;
}

#close-lesson-wrapper {
		/*width: 145px;*/
}

#instructions footer {
	height: 15px;
}

#rating {
    background: #74BBD4;
}

#signin a:hover {
	color: #74BBD4;
}

#rating {
    background: #74BBD4;
    width: 280px;
    height: 40px;
    position: relative;
    top: -100px;
    right: -310px;
    padding-left: 35px;
    border-radius: 25px;
}

#rating-handle {
    position: absolute;
    top: 10px; left: 10px;
    border-radius: 25px;
}

#rating-content {
	background: #74BBD4;
	color: #FFF;
	border-radius: 25px;
}

#rating-form .form-group {
	padding-left : 15px;
}

.center {
	text-align: center;
}

.center-btn {
	position: absolute;
	bottom: 0px;
	left: 50%;
	transform: translate(-50%, 0);
}

#connect #left-column {
	min-width:330px;
}

#top-learners a, #top-teachers a, #latest-activity a {
	font-weight: 700;
	text-decoration: underline;
}

#profile-info {
	background-color: #C7E4EE;
	color: #0F6095;
	border-radius: 15px;
	padding: 10px;
	margin-bottom: 15px;
}

#fb-plugin-box {
	background-color: #C7E4EE;
	color: #0F6095;
	border-radius: 15px;
	padding: 10px;
	min-width:330px;
}

#profile-info .location, #profile-info .biz-name {
	font-size : 14px;
	font-family: 'Open Sans';
	font-weight: 700;
}

/*#profile-info .biz-name, #profile-social-links, #profile-info .profile-description {
	position: relative;
	top: -15px;
}*/

#profile-info .profile-description a{
	text-decoration: underline;
	font-size: bold;
}

#profile-social-links {
	margin-bottom: 15px;
}

#profile-info #profile-social-links a {
	margin-right : 15px;
}

#fb-plugin {
	background-color: #FFF;
}


#profile-activity {
	margin-left: 25px;
}

#profile-activity h1, #leader-boards h1, #latest-activity h1 {
	text-align: center;
	background-color: #FFC9AE;
	color: #ff4000;
	line-height: 48px;
	border-radius: 15px;
}

#edit-profile legend {
	color: #ff4000;
	font-size: 24px;
	font-weight: 700;
}

#latest-activity {
	padding-top: 25px;
}

#recent-activity {
	margin-left: 25px;
	font-weight: 700;
}

#recent-activity hr {
	margin-bottom: 10px;
}

.activity{
	/*height : 150px;*/
	padding-bottom: 15px;
}

#accomplishments {
	text-align: center;
	font-weight: 700;
	font-size: 14px;
	font-family: 'Open Sans';
	color: #004E84;
}

.activity-number {
	font-size: 48px;
	color: #79C040;
}

#services-learned {
	/*text-align: left;*/
}

#services-created h3 {
	font-family: 'Open Sans';
	font-size: 14px;
	font-weight: 700;
}

.service-learned a{
	color: #004E84;
	text-decoration: underline;
}

.teach-top h2 {
	color: #FF4000;
	text-align: center;
}

.teach-bottom h2 {
	text-align: center;
	color: #0F6095;
}

#teach-landing #main hr {
	margin: 10px;
}

#teach-landing #main ul {
	list-style: disc;
}

#teach-landing #main li {
	margin-left: 15px;
}

#teach-landing #main .description {
	color: #FF4000;
	font-weight: 700;
	font-family: 'Open Sans';
}

.teach-top {
	background-color: #FFC9AE;
	border-radius: 15px;
	padding: 15px;
	min-height: 425px;
	margin-bottom: 15px;
}

.teach-bottom {
	background-color: #C7E4EE;
	border-radius: 15px;
	padding: 15px;
	min-height: 225px;
	margin-bottom: 15px;
}

.teach-top a, .teach-bottom a {
	margin: 15px auto;
}

.teach-top, .teach-bottom {
	margin-right: 25px;
}

#teaching-guide h2, #about-page h2 {
	color: #79C040;
}

#teaching-guide #main ul, #teaching-guide #subheader ul, #about-page ul {
	padding-left: 35px;
	list-style: disc;
}

#teaching-guide #tg-nav ul,
#about-page #tg-nav ul {
	list-style: none;
}

#teaching-guide .padded-img {
	padding-bottom: 25px;
}

#teaching-guide #main a {
	text-decoration: underline;
}

#teaching-guide #subheader a, #about-page #subheader a {
	text-decoration: none;
}

#new-service input {
	margin-bottom: 10px;
}

legend {
	font-family: 'Open Sans';
	font-weight: 700;
	color: #0F6095;
	font-size: 18px;
}
/* ... */

